[gd_scene load_steps=5 format=3 uid="uid://fk8ut51eeytp"]

[ext_resource type="Script" path="res://scenes/ui.gd" id="1_cpsqw"]
[ext_resource type="Texture2D" uid="uid://cn5jlv4gcxf67" path="res://Assets/kenney_medieval-rts/PNG/Default size/Structure/medievalStructure_20.png" id="1_sfjrp"]
[ext_resource type="Texture2D" uid="uid://dlxvp5wiabgim" path="res://Assets/kenney_medieval-rts/PNG/Default size/Structure/medievalStructure_19.png" id="2_c1cky"]
[ext_resource type="Texture2D" uid="uid://dnj0wrexp7ys0" path="res://Assets/kenney_medieval-rts/PNG/Default size/Structure/medievalStructure_21.png" id="3_g2rbl"]

[node name="Ui" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = 576.0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_cpsqw")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1280, 144)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.201527, 0.201527, 0.201527, 1)

[node name="EndTurnButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1046.0
offset_top = 34.0
offset_right = 1246.0
offset_bottom = 109.0
text = "End Turn"

[node name="TurnNumberText" type="Label" parent="."]
layout_mode = 0
offset_left = 876.0
offset_top = 56.0
offset_right = 1019.0
offset_bottom = 92.0
text = "Turn 257"

[node name="BuildingButton" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 32.0
offset_right = 388.0
offset_bottom = 107.0
alignment = 1

[node name="MineButton" type="Button" parent="BuildingButton"]
layout_mode = 2
icon = ExtResource("1_sfjrp")

[node name="BarnButton" type="Button" parent="BuildingButton"]
layout_mode = 2
icon = ExtResource("2_c1cky")

[node name="FarmButton" type="Button" parent="BuildingButton"]
layout_mode = 2
icon = ExtResource("3_g2rbl")

[node name="HeaderFoodMetal" type="Label" parent="."]
layout_mode = 0
offset_left = 496.0
offset_top = 32.0
offset_right = 611.0
offset_bottom = 107.0
text = "Food:
Metal:
Energy:"
horizontal_alignment = 2

[node name="FoodMetalText" type="Label" parent="."]
layout_mode = 0
offset_left = 624.0
offset_top = 32.0
offset_right = 739.0
offset_bottom = 107.0
theme_override_colors/font_color = Color(0.9859, 0.529702, 2.34878e-05, 1)
text = "25 (+80)
25 (+80)"

[connection signal="pressed" from="EndTurnButton" to="." method="_on_end_turn_button_pressed"]
[connection signal="pressed" from="BuildingButton/MineButton" to="." method="_on_mine_button_pressed"]
[connection signal="pressed" from="BuildingButton/BarnButton" to="." method="_on_barn_button_pressed"]
[connection signal="pressed" from="BuildingButton/FarmButton" to="." method="_on_farm_button_pressed"]
